[tool.poetry]
authors = ["Oleksandr Korol <oleksandr.korol@coaxsoft.com>"]
description = ""
name = "dash-sandbox"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
dash = "^2.9.3"
gunicorn = "^20.1.0"
pandas = "^2.0.0"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.261"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

# Ruff settings
[tool.ruff]
ignore = ["RUF005"]
line-length = 120
select = ["E", "F", "W", "I", "C4", "Q", "RUF", "PIE", "COM"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".hg",
  ".mypy_cache",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  ".venv",
  ".conf",
]
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"
[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
line-length = 120
target-version = ["py311"]
